2.1.0/_sources/gallery/api/watermark_image.rst.txt


.. _sphx_glr_gallery_api_watermark_image.py:


===============
Watermark image
===============

Use a PNG file as a watermark




.. image:: /gallery/api/images/sphx_glr_watermark_image_001.png
    :align: center


.. rst-class:: sphx-glr-script-out

 Out::

    loading /home/tcaswell/.virtualenvs/bleeding/lib/python3.7/site-packages/matplotlib/mpl-data/sample_data/logo2.png




|


.. code-block:: python

    from __future__ import print_function
    import numpy as np
    import matplotlib.cbook as cbook
    import matplotlib.image as image
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    datafile = cbook.get_sample_data('logo2.png', asfileobj=False)
    print('loading %s' % datafile)
    im = image.imread(datafile)
    im[:, :, -1] = 0.5  # set the alpha channel

    fig, ax = plt.subplots()

    ax.plot(np.random.rand(20), '-o', ms=20, lw=2, alpha=0.7, mfc='orange')
    ax.grid()
    fig.figimage(im, 10, 10, zorder=3)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.020 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: watermark_image.py <watermark_image.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: watermark_image.ipynb <watermark_image.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
