2.2.2/_sources/gallery/api/watermark_image.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_api_watermark_image.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_api_watermark_image.py:


===============
Watermark image
===============

Use a PNG file as a watermark




.. image:: /gallery/api/images/sphx_glr_watermark_image_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    loading /tmp/build_mpl/lib/python3.6/site-packages/matplotlib/mpl-data/sample_data/logo2.png




|


.. code-block:: python

    from __future__ import print_function
    import numpy as np
    import matplotlib.cbook as cbook
    import matplotlib.image as image
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    datafile = cbook.get_sample_data('logo2.png', asfileobj=False)
    print('loading %s' % datafile)
    im = image.imread(datafile)
    im[:, :, -1] = 0.5  # set the alpha channel

    fig, ax = plt.subplots()

    ax.plot(np.random.rand(20), '-o', ms=20, lw=2, alpha=0.7, mfc='orange')
    ax.grid()
    fig.figimage(im, 10, 10, zorder=3)

    plt.show()


.. _sphx_glr_download_gallery_api_watermark_image.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: watermark_image.py <watermark_image.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: watermark_image.ipynb <watermark_image.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
